# opennurbs

./: CMakeLists.txt  opennurbs_crc.cpp  opennurbs_defines.h  opennurbs_font.cpp  opennurbs_gl.cpp  opennurbs_input_libsdir.h  opennurbs_internal_unicode_cp.h  opennurbs_intersect.cpp  opennurbs_lock.h  opennurbs_lookup.cpp  opennurbs_precompiledheader.cpp  opennurbs_public-config.cmake.in  opennurbs_public.vcxproj  opennurbs_public_examples.h  opennurbs_public_staticlib.vcxproj  opennurbs_subd.cpp  opennurbs_subd.h  opennurbs_subd_fragment.cpp  opennurbs_subd_heap.cpp  opennurbs_subd_mesh.cpp  opennurbs_subd_ring.cpp  opennurbs_subd_texture.cpp  opennurbs_text.cpp  opennurbs_unicode_cp932.cpp  opennurbs_unicode_cp949.cpp  opennurbs_win_dwrite.cpp  opennurbs_zlib.cpp  opennurbs_zlib.h
example_brep/: CMakeLists.txt  example_brep.vcxproj
example_convert/: CMakeLists.txt  example_convert.vcxproj
example_gl/: CMakeLists.txt
example_read/: CMakeLists.txt  example_read.vcxproj
example_roundtrip/: CMakeLists.txt
example_test/: CMakeLists.txt  example_test.vcxproj
example_userdata/: CMakeLists.txt  example_userdata.vcxproj
example_write/: CMakeLists.txt  example_write.vcxproj
zlib/: zlib.vcxproj
