
SET(SETUP_TARGET_NAME example_userdata)
include_directories(${PROJECT_SOURCE_DIR}/)

#INCLUDE_DIRECTORIES(AFTER  ${JSONCPP_INCLUDE_DIR})
# INCLUDE_DIRECTORIES(AFTER  ${JSONCPP_INCLUDE_DIR})
#INCLUDE_DIRECTORIES( ${OPENAL_INCLUDE_DIR} )

SET(SETUP_SOURCES
    example_userdata.cpp
    example_ud.cpp
)

SET(SETUP_HEADERS
    example_ud.h
)


ADD_DEFINITIONS(-D OPENNURBS_IMPORTS)


ADD_EXECUTABLE(${SETUP_TARGET_NAME} ${SETUP_HEADERS} ${SETUP_SOURCES})
SET_TARGET_PROPERTIES(${SETUP_TARGET_NAME} PROPERTIES PROJECT_LABEL "${SETUP_TARGET_NAME}")
TARGET_LINK_LIBRARIES(${SETUP_TARGET_NAME}
    opennurbs_public
	${ZLIB_LIBRARIES}
	${FREETYPE_LIBRARIES}
	${OPENGL_LIBRARIES}
	)
if(WIN32)
TARGET_LINK_LIBRARIES(${SETUP_TARGET_NAME}
	shlwapi.lib)
endif()
		
SET(INSTALL_INCDIR include)
SET(INSTALL_BINDIR bin)
SET(INSTALL_LIBDIR bin)
SET(INSTALL_ARCHIVEDIR lib)

INSTALL(
    TARGETS ${SETUP_TARGET_NAME}
    RUNTIME DESTINATION ${INSTALL_BINDIR}
    LIBRARY DESTINATION ${INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${INSTALL_ARCHIVEDIR}
)
